refactor(auth): use data from authorization to invoke Nodo `closePayment`
