# api-spec/api.yaml
@@ -230,10 +230,6 @@ components:
           $ref: "https://raw.githubusercontent.com/pagopa/pagopa-infra/8400e0ef51f9fd6ef9386ccc4e520d24465ba2b5/src/api/nodopagamenti_api/nodoPerPM/v1/_swagger.json.tpl#/definitions/AdditionalPaymentInformations"
       required:
         - authorizationResult
-        - tipoVersamento
-        - identificativoIntermediario
-        - identificativoCanale
-        - pspTransactionId
         - timestampOperation
         - additionalPaymentInformations
       example:
