# src/main/java/it/pagopa/transactions/commands/handlers/TransactionUpdateAuthorizationHandler.java
@@ -58,9 +58,9 @@ public class TransactionUpdateAuthorizationHandler implements CommandHandler<Tra
                                 .paymentTokens(List.of(transaction.getPaymentToken().value()))
                                 .outcome(authorizationResultToOutcome(updateAuthorizationRequest.getAuthorizationResult()))
                                 .identificativoPsp(authorizationRequestData.getPspId())
-                                .tipoVersamento(ClosePaymentRequestDto.TipoVersamentoEnum.fromValue(updateAuthorizationRequest.getTipoVersamento()))
-                                .identificativoIntermediario(updateAuthorizationRequest.getIdentificativoIntermediario())
-                                .identificativoCanale(updateAuthorizationRequest.getIdentificativoCanale())
+                                .tipoVersamento(ClosePaymentRequestDto.TipoVersamentoEnum.fromValue(authorizationRequestData.getPaymentTypeCode()))
+                                .identificativoIntermediario(authorizationRequestData.getBrokerName())
+                                .identificativoCanale(authorizationRequestData.getPspChannelCode())
                                 .pspTransactionId(authorizationRequestData.getTransactionId().toString())
                                 .totalAmount(new BigDecimal(transaction.getAmount().value() + authorizationRequestData.getFee()))
                                 .fee(new BigDecimal(authorizationRequestData.getFee()))
